VaultX 1.1.3: Java 21 Virtual Threads, Event Short-circuiting, and PlayerQuit cache purging